# user_modelling

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: eval_lmsys_user_probes.ipynb  multiple_prompts.ipynb  multiple_prompts_age.ipynb  node_wise_patching.ipynb  open_ended_prompts.ipynb  plot_attrs.ipynb  probe_analysis.ipynb  train_user_probes.ipynb
tests/: test_data.py  test_sae_loader.py
utils/: __init__.py  activation_patching.py  attribution.py  cache.py  data.py  index.py  load_probes.py  metrics.py  neel_plotly.py  neel_utils.py  plots.py  probe_attribution.py  probes.py  sae_loader.py  substrings.py
