[tool.poetry]
name = "user-modelling"
version = "0.1.0"
description = ""
authors = ["Rohan Gupta <cybershiptrooper@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sae-lens = "^4.0.9"
transformer-lens = "^2.8.0"
plotly = "^5.24.1"
matplotlib = "^3.9.2"
nbformat = "^5.10.4"
pip-tools = "^7.4.1"
scikit-learn = "^1.5.2"
huggingface-hub = "^0.26.1"
ruff = "^0.7.1"
pyright = "^1.1.386"
pytest = "^8.3.3"
jaxtyping = "^0.2.34"
pip = "^24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["*.ipynb"]
